--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -35,4 +36,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.bg-video {
+  background-image: url("./Assets/videos/background.mp4");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
